src/components/Basal/Basal.scss
.basal {
  width: 100vw;
  height: 100vh;
  background-image: url("/assets/blob_background.svg");
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  overflow: hidden;

  @include tablet {
    background-image: none;
  }

  h1 {
    margin: 10px 0;
    color: $color2;
    text-align: center;
  }

  .basal__calc {
    width: 100%;
    height: calc(4 * 4.7rem);
    position: relative;

    @include mobile {
      display: flex;
      flex-direction: column;
      height: 85%;
    }
  }

  .basal__footer {
    width: 100%;
  }
}

//DIV INPUTS
.input {
  width: 275px;
  height: 4.5rem;
  background-color: $color2;
  font-size: 1rem;
  position: absolute;
  z-index: 3;
  text-align: center;
  color: $background;
  display: flex;

  @include mobile {
    position: relative;
    margin: 1.5% 0;
  }

  .input__label-left {
    position: absolute;
    bottom: 0;
    right: 15%;
    color: $background;
  }

  .input__label-right {
    position: absolute;
    bottom: 0;
    left: 15%;
    color: $background;
  }

  .input__label-activity {
    position: absolute;
    bottom: 0;
    right: 35%;
    color: $background;
  }
}

.input-left {
  border-top-right-radius: 20% 50%;
  border-bottom-right-radius: 20% 50%;
  left: -100%;
  top: 0;
  transition: all 1.2s ease-in-out;

  &:nth-child(2) {
    top: 4.8rem;

    @include mobile {
      top: 0;
    }
  }
}

.active-left {
  left: 50.5%;
  transition: all 1.2s ease-in-out;

  @include mobile {
    left: 10%;
  }
}

.input-right {
  border-top-left-radius: 20% 50%;
  border-bottom-left-radius: 20% 50%;
  right: -100%;
  top: 0;
  transition: all 1.2s ease-in-out;

  &:nth-child(4) {
    top: 4.8rem;

    @include mobile {
      top: 0;
    }
  }
}

.active-right {
  right: 50.5%;
  transition: all 1.2s ease-in-out;

  @include mobile {
    right: -10%;
  }
}

.input-activity {
  top: calc(2 * 4.8rem);
  width: 550px;
  left: -100%;
  border-top-left-radius: 10% 50%;
  border-bottom-left-radius: 10% 50%;
  border-top-right-radius: 10% 50%;
  border-bottom-right-radius: 10% 50%;
  transition: all 1.2s ease-in-out;
  display: flex;
  justify-content: center;
  align-items: center;

  @include mobile {
    width: 95%;
    top: 0;
  }
}

.activity-active {
  left: calc(50% - 275px);
  transition: all 1.2s ease-in-out;

  @include mobile {
    left: 2%;
  }
}

.btn-calcular {
  all: unset;
  width: 200px;
  height: 4.5rem;
  background-color: $color2;
  font-size: 2rem;
  position: absolute;
  top: calc(3 * 4.8rem);
  right: -100%;
  z-index: 3;
  text-align: center;
  border-top-left-radius: 20% 50%;
  border-bottom-left-radius: 20% 50%;
  border-top-right-radius: 20% 50%;
  border-bottom-right-radius: 20% 50%;
  color: $background;
  cursor: pointer;
  transition: all 1.2s ease-in-out;

  @include mobile {
    position: relative;
    top: 0;
  }
}

.btn-active {
  right: calc(50% - 100px);
  transition: all 1.2s ease-in-out;

  @include mobile {
    right: -20%;
  }
}

.result {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  opacity: 0%;

  @include mobile {
    position: absolute;
    padding: 3%;
    text-align: center;
  }

  h3 {
    font-size: 1.5rem;
    color: $color3;
  }
  h2 {
    margin-top: 1rem;
  }
}

.result-active {
  opacity: 100%;
  transition: all 1.2s ease-in-out;
}

// INPUTS
.input__gender {
  height: 100%;
  width: 60%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;

  .input__gender-option {
    margin: 3px 0;
    width: 80%;
    font-size: 1.2rem;
    color: $background;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 3px;
    cursor: pointer;

    &:hover {
      border: 1px solid $background;
    }
  }

  .gender-active {
    border: 1px solid $background;
  }

  .gender-inactive {
    border: 1px solid $color2;
  }
}

.input__peso {
  height: 100%;
  width: 60%;
  display: flex;
  align-items: center;
  justify-content: center;

  input {
    width: 70%;
  }
}

.input__altura {
  height: 100%;
  width: 60%;
  position: absolute;
  right: 0;
  top: 25%;
}

.input__idade {
  height: 100%;
  width: 60%;
  position: absolute;
  right: 0;
  top: 25%;
}

.input__intensidade {
  padding: 3px;
  height: 100%;
  width: 80%;
  display: flex;
  align-items: center;

  select {
    width: 100%;
    font-size: 1.3rem;
    background-color: $color2;
    color: $background;
    border: 1px solid $color2;
    border-bottom: 2px solid;
    cursor: pointer;
    margin-bottom: 14px;

    option {
      width: 100%;
      font-size: 1rem;
    }
  }
}

.icon {
  fill: $background;
  margin-right: 6px;
}

input {
  all: unset;
  color: $background;
  font-size: 2rem;
  cursor: pointer;

  &::placeholder {
    color: $background;
  }
}

.btn-more-info {
  all: unset;
  margin: 0 8px 8px 8px;
  background-color: $background;
  font-size: 1rem;
  padding: 2px 4px;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: center;

  &:hover{
    background-color: $color2;
    color: $background;

    .btn-icon-drop {
      fill: $background;
    }
  }

  @include tablet {
    background-color: $color2;
    color: $background;

    .btn-icon-drop {
      fill: $background;
    }
  }
}

